Browser Support and Fixing Flexbox Gap in Safari

--- a/css/queries.css
+++ b/css/queries.css
@@ -174,7 +174,9 @@
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     position: absolute;
     top: 0;
     left: 0;
@@ -369,5 +371,57 @@
   .cta-image {
     height: 32rem;
     grid-row: 1;
+  }
+}
+/**************************/
+/* Fixing Safari flexbox gap */
+/**************************/
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-img {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-img {
+  margin-right: 1.6rem;
+}
+
+/* .no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+} */
+
+/* .no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+} */
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
   }
 }
